<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:fontFamily="@font/poppins" >

    <ImageView
        android:id="@+id/restaurantImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/myrestaurant" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/title"
        android:textColor="@color/primary_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:fontFamily="@font/poppins" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/findRestaurantsButton"
        android:background="@color/primary_color"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:hint="@string/zipcode"
        android:layout_centerHorizontal="true"
        app:fontFamily="@font/poppins"
        />

    <Button
        android:id="@+id/findRestaurantsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/button_color"
        android:text="@string/button_name"
        android:textColor="@color/primary_color"
        app:fontFamily="@font/poppins"/>

</RelativeLayout>